--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="error-message">
-    에러입니다
+    정확한 도시(국가)명을 입력하세요.
   </div>
   <div class="weather-result-total">
     <div class="weather-title">
